@@ -61,6 +61,14 @@ Set the initial access position  to the end of the file.
 Open the file for reading and writing.  If the file doesn't exist,
 create a new empty file.
 Set the initial access position  to the end of the file.
+.VS 8.5
+.PP
+All of the legal \fIaccess\fR values above may have the character
+\fBb\fR added as the second or third character in the value to
+indicate that the opened channel should be configured with the
+\fB-translation binary\fR option, making the channel suitable for 
+reading or writing of binary data.
+.VE 8.5
 .PP
 In the second form, \fIaccess\fR consists of a list of any of the
 following flags, all of which have the standard POSIX meanings.
@@ -77,6 +85,11 @@ Open the file for both reading and writing.
 .TP 15
 \fBAPPEND\fR
 Set the file pointer to the end of the file prior to each write.
+.TP 15
+.VS 8.5
+\fBBINARY\fR
+Configure the opened channed with the \fB-translation binary\fR option.
+.VE 8.5
 .TP 15
 \fBCREAT\fR
 Create the file if it doesn't already exist (without this flag it
@@ -106,14 +119,6 @@ If a new file is created as part of opening it, \fIpermissions\fR
 (an integer) is used to set the permissions for the new file in
 conjunction with the process's file mode creation mask.
 \fIPermissions\fR defaults to 0666.
-.PP
-Note that if you are going to be reading or writing binary data from
-the channel created by this command, you should use the
-\fBfconfigure\fR command to change the \fB-translation\fR option of
-the channel to \fBbinary\fR before transferring any binary data.  This
-is in contrast to the ``b'' character passed as part of the equivalent
-of the \fIaccess\fR parameter to some versions of the C library
-\fIfopen()\fR function.
 
 .SH "COMMAND PIPELINES"
 .PP
